# adelie

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: engine_linux.yml  engine_macos.yml  engine_windows.yml
docker/: Dockerfile
scripts/: reformat_code.py
scripts/cmake/: FindGLM.cmake  FindXCB.cmake  InstallHooks.cmake
scripts/cmake/git/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
scripts/hooks/: pre-commit
shader/: cube.frag  cube.vert
source/: CMakeLists.txt
source/editor/: CMakeLists.txt  plist.in
source/editor/watschel/: WatschelApp.cxx  WatschelApp.hxx
source/editor/watschel/platform/linux/: main.cxx
source/editor/watschel/platform/macos/: AppDelegate.hxx  AppDelegate.mm  main.mm
source/editor/watschel/platform/windows/: main.cxx
source/engine/: Adelie.hxx  CMakeLists.txt
source/engine/adelie/: VersionInformation.cxx.in  VersionInformation.hxx  adelie.cxx  adelie.hxx
source/engine/adelie/core/: Assert.hxx  Input.hxx  Layer.cxx  Layer.hxx  LayerStack.cxx  LayerStack.hxx  Timestep.hxx
source/engine/adelie/core/events/: Event.cxx  Event.hxx  EventDispatcher.hxx  KeyEvent.cxx  KeyEvent.hxx  KeyPressedEvent.cxx  KeyPressedEvent.hxx  KeyReleasedEvent.cxx  KeyReleasedEvent.hxx  KeyTypedEvent.cxx  KeyTypedEvent.hxx  MouseButtonEvent.cxx  MouseButtonEvent.hxx  MouseButtonPressedEvent.cxx  MouseButtonPressedEvent.hxx  MouseButtonReleasedEvent.cxx  MouseButtonReleasedEvent.hxx  MouseMovedEvent.cxx  MouseMovedEvent.hxx  MouseScrolledEvent.cxx  MouseScrolledEvent.hxx  WindowCloseEvent.cxx  WindowCloseEvent.hxx  WindowResizeEvent.cxx  WindowResizeEvent.hxx
source/engine/adelie/core/renderer/: Renderer.cxx  Renderer.hxx  WindowFactory.cxx  WindowFactory.hxx  WindowInterface.hxx
source/engine/adelie/exception/: IOException.cxx  IOException.hxx  NotImplementedException.cxx  NotImplementedException.hxx  RuntimeException.cxx  RuntimeException.hxx  VulkanRuntimeException.cxx  VulkanRuntimeException.hxx
source/engine/adelie/io/: Logger.cxx  Logger.hxx
source/engine/adelie/platform/linux/: WaylandWindow.cxx  WaylandWindow.hxx  XcbWindow.cxx  XcbWindow.hxx
source/engine/adelie/platform/macos/: CocoaWindow.hxx  CocoaWindow.mm
source/engine/adelie/platform/windows/: Win32Window.cxx  Win32Window.hxx
source/engine/adelie/renderer/vulkan/: VulkanBufferManager.cxx  VulkanBufferManager.hxx  VulkanExtensionManager.cxx  VulkanExtensionManager.hxx  VulkanRenderer.cxx  VulkanRenderer.hxx  VulkanShaderManager.cxx  VulkanShaderManager.hxx  VulkanVertex.hxx
